--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.24.0",
     "colors": "^1.4.0",
     "js-yaml": "^4.1.0",
     "pom-parser": "^1.2.0",
