--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "colors": "^1.4.0"
+    "axios": "^0.24.0",
+    "colors": "^1.4.0",
+    "js-yaml": "^4.1.0",
+    "pom-parser": "^1.2.0",
+    "toml": "^3.0.0"
   },
   "devDependencies": {
     "@types/node": "^16.11.11",
